--- a/.github/actions/test-ruby/action.yml
+++ b/.github/actions/test-ruby/action.yml
@@ -4,7 +4,7 @@ inputs:
   ruby-version:
     description: Version of ruby to use with ruby/setup-ruby@v1
     required: false
-    default: '3.0'
+    default: "3.0"
 
 runs:
   using: "composite"
@@ -14,7 +14,7 @@ runs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
-        bundler-cache: true
+        bundler-cache: false
 
     - name: Run tests
       run: bundle exec rake
