--- a/.github/actions/test-ruby/action.yml
+++ b/.github/actions/test-ruby/action.yml
@@ -15,6 +15,7 @@ runs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: false
+        cache-version: 1
 
     - name: Run tests
       run: bundle exec rake
