--- a/.github/actions/test-ruby/action.yml
+++ b/.github/actions/test-ruby/action.yml
@@ -17,6 +17,10 @@ runs:
         bundler-cache: false
         cache-version: 1
 
+    - name: Dump bundler config
+      run: bundle config list
+      shell: bash
+
     - name: Run tests
       run: bundle exec rake
       shell: bash
