--- a/.github/workflows/test-ruby.yml
+++ b/.github/workflows/test-ruby.yml
@@ -15,7 +15,17 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         ruby: ["2.6", "2.7", "3.0", "3.1"]
-        gemfile: ["activesupport-4", "minitest-4"]
+        gemfile:
+          - activesupport-4
+          - activesupport-5
+          - minitest-4
+          - minitest-5
+          - plain-ruby
+          - rspec-1
+          - rspec-2
+          - rspec-3
+          - test-unit-2
+          - test-unit-3
 
     runs-on: ${{ matrix.os }}
     steps:
