--- a/.github/workflows/test-ruby.yml
+++ b/.github/workflows/test-ruby.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         ruby: ["2.6", "2.7", "3.0", "3.1"]
-        gemfile:
+        gemfile: # These are duplicated from the test/gemfiles folder
           - activesupport-4
           - activesupport-5
           - minitest-4
