--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -2,4 +2,4 @@ _extends: .github
 
 repository:
   name: multi_test
-  description: Help Cucumber-Ruby pick a good default assertion framework
+  description: Helps cucumber-ruby pick a good default assertion framework
