Revert "Update settings.yml"
This reverts commit 13e06a307da00a41a50ca34aede8a2046f72577f.

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -2,4 +2,4 @@ _extends: .github
 
 repository:
   name: multi_test
-  description: Helps cucumber-ruby pick a good default assertion framework
+  description: Help Cucumber-Ruby pick a good default assertion framework
